# cpp_project_template

./: CMakeLists.txt  Makefile
libs/: CMakeLists.txt
libs/dummy_counter_lib/: CMakeLists.txt  dummy_counter.cc  dummy_counter.h
main/: CMakeLists.txt  dummy_main.cc
